<resources>
    <string name="app_name">AKU Health First</string>
    <string name="google_maps_key">AIzaSyBsP8jCqqrTckRDPcfaefKutSDo3NBENok</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_right_drawer">Right Drawer</string>
    <string name="font_regular">HelveticaNeue Light.ttf</string>
    <string name="font_bold">HelveticaNeue Medium.ttf</string>
    <string name="next_build">This feature will be implemented in next build</string>
    <string name="guest_msg">Please login to use this feature.</string>
    <string name="pick_image_intent_text">Choose an image</string>
    <string name="notifications">Notifications</string>
    <string name="orderHistory">Order History</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="contactUs">Contact Us</string>
    <string name="myAddresses">My Addresses</string>
    <string name="aboutApp">About App</string>
    <string name="logout">Logout</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="not_a_member_register_an_account">Not a member? Register an account</string>
    <string name="new_user">New User?</string>
    <string name="full_name">Full Name</string>
    <string name="mrnNumber">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="email_address">Email Address</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="tvEmailAdress">Enter E-mail Address</string>
    <string name="submit_button_image">submit Button Image</string>
    <string name="country">Country</string>
    <string name="we_ll_text_you_code_to_confirm_your_number">We\'ll text you a code to confirm your number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="a_verification_code_has_been_sent_to_your_mobile_phone">A verification code has been sent to your mobile phone</string>
    <string name="didn_t_get_a_code_yet_wait_for_3_43_seconds">Didn\'t get a code yet? Wait for</string>
    <string name="resend_code">Resend Code</string>
    <string name="address">Address</string>
    <string name="notification">Notifications</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="overview">Overview</string>
    <string name="provide_valid_email_address">You have to provide a valid email address so we can get back to you</string>
    <string name="missing_products">Missing Products</string>
    <string name="in_accurate_product_description">Inaccurate product description</string>
    <string name="payment_issues">Payment issues</string>
    <string name="something_else">Something else....</string>
    <string name="please_type_your_issue_here">Please type your issue here</string>
    <string name="camera_image">Camera Image</string>
    <string name="submitted">Submitted</string>
    <string name="assigned">Assigned</string>
    <string name="in_progress">In Progress</string>
    <string name="out_for_delivery">Out for Delivery</string>
    <string name="add_remove_product">Add/Remove Product</string>
    <string name="estimated_delivery_time">Estimated delivery time</string>
    <string name="enter_current_password">Enter Current Password</string>
    <string name="new_password">New Password</string>
    <string name="line">Line</string>
    <string name="select_slot_to_recieve_your_order">Select Slot to Receive your Order</string>
    <string name="add_a_note_to_your_order">Add a note to your order....</string>
    <string name="add_a_color_to_your_order">Add a color to your order</string>
    <string name="additional_notes">Additional Notes</string>
    <string name="set_frequency">Set Frequency</string>
    <string name="order_summary">Order Summary</string>
    <string name="thank_you">Thank You</string>
    <string name="your_order_has_been_confirmed">Your order has been confirmed and will be  dispatched soon. Meanwhile you can \n check status of your order.</string>
    <string name="your_order_summary">Your Order Summary</string>
    <string name="order_id">Order ID</string>
    <string name="order_date">Order Date</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="frequency">Frequency</string>
    <string name="once">Once</string>
    <string name="additional_note">Additional Notes</string>
    <string name="Address">Address</string>
    <string name="total">Total</string>
    <string name="payment">Payment</string>
    <string name="title_address">Address</string>
    <string name="selection_delivery_location">Select Delivery Location From Google Map</string>
    <string name="country_name">Country Name</string>
    <string name="city_name">City Name</string>
    <string name="building_name">Building Name</string>
    <string name="floor_optional">Floor (optional)</string>
    <string name="apartment_optional">Apartment (optional)</string>
    <string name="nearest_landmark_optional">Nearest Landmark (optional)</string>
    <string name="location_type">Location Type</string>
    <string name="street_name">Street Name</string>
    <string name="please_feel_free_to_contact_us_for">Please feel free to Contact Us for</string>
    <string name="any_enquiries_on_the_option_below">any enquiries on the option below:</string>
    <string name="start_shopping_to_enjoy">Start shopping to enjoy shopping experiences with us.</string>
    <string name="no_items">No Items</string>
    <string name="enter_your_detail_here">Enter your detail here...</string>
    <string name="date">Date:</string>
    <string name="order_id2">Order ID:</string>
    <string name="frequency2">Frequency:</string>
    <string name="delivery_time2">Delivery Time:</string>
    <string name="address2">Address:</string>
    <string name="additional_notes2">Additional Notes:</string>
    <string name="total2">Total:</string>
    <string name="detail">detail</string>
    <string name="continueCheckout">Continue Checkout</string>
    <string name="add_remove_products">Add/remove products</string>
    <string name="edit_scheduling">Edit Scheduling</string>
    <string name="delete_from_order_history">Delete from Order History</string>
    <string name="close">Close</string>
    <string name="needed_to_reach_minimum_order">needed to reach minimum order.</string>
    <string name="title_activity_maps">Map</string>
    <string name="please_type_issue_here">please type issue here</string>
    <string name="late_order">Late Order</string>
    <string name="john_gmail_com">john@gmail.com</string>
    <string name="background_image">background Image</string>
    <string name="sort_by">Sort by</string>
    <string name="my_recent">My Recent</string>
    <string name="popular">Most Popular</string>
    <string name="ordered">Most Ordered</string>
    <string name="title">Title</string>
    <string name="you_are_all_signed_up">You are all signed up</string>
    <string name="we_re_glad_you_re_here">We\'re glad you\'re here!</string>
    <string name="ok">Ok</string>
    <string name="do_you_want_to_rate_your_last_nshopping_experience">Do you want to rate your last  shopping experience?</string>
    <string name="delivery_speed">Delivery Speed</string>
    <string name="product_accuracy">Product accuracy</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="type_here">Type here..</string>
    <string name="ship_to_my_delivery_address">Ship to my delivery address</string>
    <string name="order_no">Order No.</string>
    <string name="processing">processing.</string>
    <string name="about">About App</string>
    <string name="generic">Lorem ipsum dolor sit amet, rutrum tempus nascetur parturient ipsum lobortis, vel iaculis posuere leo odio, cum velit amet at vestibulum non, ac eiusmod ornare dictum, in praesent sed. Tincidunt pellentesque. Tellus earum a, wisi tempus suspendisse quam dui adipiscing. Sapien morbi scelerisque vitae sit, molestie suscipit quis cras parturient ipsum, sodales turpis, fusce ultrices quam vestibulum nec sit malesuada. Nonummy ultricies placerat integer vel similique, eu vestibulum volutpat quisque eget, porttitor vulputate morbi quam eros augue, amet turpis, et elit mauris vehicula. Malesuada donec erat, ut penatibus rutrum, amet lectus arcu. Dis suspendisse itaque dis dolor semper, justo amet condimentum nunc nibh quis etiam, luctus diam in enim donec id nam, ante dolor ultrices nam consequat aliquam. Tincidunt aliquam metus nulla eu quam integer, at sem in pellentesque ipsum, libero diam eos iaculis aliquam libero, a per vestibulum felis arcu. Et eros nullam est hymenaeos, libero leo, consequat a vehicula, vitae massa dictumst.
Ut leo duis, lacus rerum integer in lobortis cursus, montes sodales amet nunc nec nunc justo. Pulvinar turpis lectus et nunc consectetuer, ultrices viverra. Elit adipiscing metus id wisi. Mi nibh sociosqu, odio dignissim fames nisl wisi. Aenean lectus, luctus sit ullamcorper tincidunt, sed pellentesque feugiat in. Fusce aliquam vitae justo risus, ullamcorper donec. Proin amet donec at tristique, diam et justo ipsum nascetur. Lacinia nisl faucibus tempus aliquam ante eu, sit id montes varius. Ligula non, pretium mauris, orci lacus ac fringilla. Sed at.
Aliquam vitae, eu elit, in luctus nulla nunc ornare sodales tincidunt, libero laoreet accumsan netus, amet nec eros venenatis justo dis sit. Pede pulvinar leo dui eros, habitant erat nunc lectus. Suscipit ligula in cras et, etiam parturient accumsan erat orci neque, phasellus nullam mauris wisi convallis in. Lacinia dapibus sociis aspernatur nibh, sodales pretium arcu, consectetuer ornare metus eros, est accumsan et lorem duis adipiscing, vehicula fusce elementum. Natoque cursus ultricies semper nostra dignissim, eget duis viverra vestibulum, elit eros quis quisque elementum semper massa.
Enim vitae euismod eu velit pede eu, sodales malesuada sit fermentum ut dictum dictum, justo dui sapien vitae. Justo quisque, commodo potenti nascetur ultrices tellus consequat ut, ligula tristique aliquam dapibus et in quis. Donec nibh arcu vel nonummy. Eget felis. In tellus orci donec, felis porta et dis nibh, tellus dictumst fermentum enim sit nulla praesent. Dolor sed tempor maecenas, vitae auctor tellus bibendum venenatis, mauris turpis blandit, pede risus a elit pulvinar eu proin, eleifend augue anim. Varius posuere pharetra tincidunt, aliquam aliquam luctus voluptatibus dignissim, eu quis. Suspendisse hac imperdiet donec cras id mauris, et sit tempor lobortis, etiam nec volutpat vel eu vitae eros, aliquam at suscipit molestie, platea in wisi feugiat egestas nulla.
</string>
    <string name="done">Done</string>
    <string name="report_an_issue">Report an Issue</string>
    <string name="report">Report</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="mute">Mute</string>
    <string name="clear_chat">Clear Chat</string>
    <string name="block">Block</string>
    <string name="Unblock">Unblock</string>
    <string name="search_">Search</string>
    <string name="broadcast_list_info">Broadcast list info</string>
    <string name="broadcast_list_media">Broadcast list media</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="more">More</string>
    <string name="email_chat">Email chat</string>
    <string name="add_shortcut">Add shortcut</string>
    <string name="unmute">Unmute</string>
    <string name="add_to_contacts">Add to contacts</string>
    <string name="recorded_call">Recorded Call</string>
</resources>