<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_list_info"
        android:title="@string/broadcast_list_info" />

    <item
        android:id="@+id/item_list_media"
        android:title="@string/broadcast_list_media" />

    <item
        android:id="@+id/item_search"
        android:title="@string/search_" />

    <item
        android:id="@+id/item_wallpaper"
        android:title="@string/wallpaper" />

    <item
        android:id="@+id/item_more"
        android:title="@string/more">
        <menu>
            <group>
                <item
                    android:id="@+id/item_clear_chat"
                    android:title="@string/clear_chat" />
                <item
                    android:id="@+id/item_email_chat"
                    android:title="@string/email_chat" />
                <item
                    android:id="@+id/item_add_shortcut"
                    android:title="@string/add_shortcut" />
            </group>

        </menu>
    </item>

</menu>