<?xml version="1.0" encoding="utf-8"?>
<menu  xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_view_contact"
        android:title="View contact"/>

    <item
        android:id="@+id/item_add_contact"
        android:title="@string/add_to_contacts"
        android:visible="false"/>

    <item
        android:id="@+id/item_media"
        android:title="Media"/>

    <item
        android:id="@+id/item_search"
        android:title="Search"/>

    <item
        android:id="@+id/item_mute"
        android:title="@string/mute"/>

    <item
        android:id="@+id/item_unmute"
        android:title="@string/unmute"/>

    <item
        android:id="@+id/item_wallpaper"
        android:title="Wallpaper"/>
    <item
        android:id="@+id/item_more"
        android:title="More"
        >
        <menu
            >
        <group
            >
            <item
                android:id="@+id/item_recorded_call"
                android:title="@string/recorded_call"/>
            <item
                android:id="@+id/item_block"
                android:title="@string/block"/>
            <item
                android:id="@+id/item_unblock"
                android:title="@string/Unblock"/>
            <item
                android:id="@+id/item_clear_chat"
                android:title="Clear chat"/>
            <item
                android:id="@+id/item_email"
                android:title="Email chat"/>
            <item
                android:id="@+id/item_add_shortcut"
                android:title="Add shortcut"/>
        </group>

        </menu>
    </item>

</menu>