<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/x20dp"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingTop="@dimen/x15dp"
    android:paddingLeft="@dimen/x15dp"
    android:paddingRight="@dimen/x15dp"
    android:paddingBottom="@dimen/x2dp">


    <com.ctrlplusz.anytextview.AnyTextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/x10dp"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="#414141"
        android:textSize="22sp"
        app:typeface="@string/font_bold" />



    <com.ctrlplusz.anytextview.AnyTextView
        android:id="@+id/txtMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/you_are_all_signed_up"
        android:textColor="@color/text_dark"
        android:textSize="15sp"
        app:typeface="@string/font_regular" />


    <com.ctrlplusz.anytextview.AnyTextView
        android:id="@+id/txtUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="John Doe"
        android:textColor="@color/base_color"
        android:textSize="16sp"
        app:typeface="@string/font_bold" />


    <com.ctrlplusz.anytextview.AnyTextView
        android:id="@+id/txtMessage2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/x20dp"
        android:gravity="center"
        android:text="@string/we_re_glad_you_re_here"
        android:textColor="@color/text_dark"
        android:textSize="15sp"
        app:typeface="@string/font_regular" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#ECECED" />

        <Button
            android:id="@+id/btnButton1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#fff"
            android:text="@string/ok"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textColor="@color/base_color"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnButton2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/img_no"
            android:textColor="#fff"
            android:visibility="invisible" />

    </LinearLayout>


</LinearLayout>
