<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/x25dp">

            <edu.aku.family_hifazat.widget.AnyTextView
                android:id="@+id/txtVerificationCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/x5dp"
                android:fontFamily="@string/font_bold"
                android:text="@string/enter_verification_code"
                android:textColor="@color/colorPrimary" />

            <edu.aku.family_hifazat.widget.AnyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/x5dp"
                android:text="@string/a_verification_code_has_been_sent_to_your_mobile_phone"
                android:textColor="@color/txt_aku_blue" />


            <com.andreabaccega.widget.FormEditText
                android:id="@+id/edtVerificationCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/x5dp"
                android:background="@drawable/imgninepatch"
                android:inputType="number"
                android:maxLength="5"
                android:maxLines="1"
                android:padding="@dimen/x10dp"
                android:paddingLeft="@dimen/x20dp"
                android:textColor="@color/txt_aku_blue" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/x10dp">

                <edu.aku.family_hifazat.widget.AnyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/didn_t_get_a_code_yet_wait_for_3_43_seconds"
                    android:textColor="@color/txt_aku_blue"
                    app:typeface="@string/needed_to_reach_minimum_order"
                    />

                <edu.aku.family_hifazat.widget.AnyTextView
                    android:id="@+id/txtCountDownTimer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0:00"
                    android:paddingLeft="@dimen/x5dp"
                    android:paddingRight="@dimen/x5dp"
                    android:textColor="@color/txt_aku_blue"
                    app:typeface="@string/font_bold"/>

                <edu.aku.family_hifazat.widget.AnyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="seconds"
                    android:textColor="@color/txt_aku_blue"
                    app:typeface="@string/needed_to_reach_minimum_order"
                    />



            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <edu.aku.family_hifazat.widget.AnyTextView
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="@dimen/x5dp"
                android:background="@drawable/imgbutton_grey2"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/c_white"
                android:textSize="17sp"
                app:typeface="@string/font_regular" />


            <edu.aku.family_hifazat.widget.AnyTextView
                android:id="@+id/btnConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/x5dp"
                android:background="@drawable/imgbutton_yes_small"
                android:gravity="center"
                android:text="@string/confirm"
                android:textColor="@color/c_white"
                android:textSize="17sp"
                app:typeface="@string/font_regular" />

        </LinearLayout>

        <edu.aku.family_hifazat.widget.AnyTextView
            android:id="@+id/tvResendCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x10dp"
            android:gravity="center"
            android:padding="@dimen/x5dp"
            android:text="@string/resend_code"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>
</ScrollView>