<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#A000" />


    <com.ctrlplusz.anytextview.AnyTextView
        android:id="@+id/txtAddRemove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_color"
        android:drawableLeft="@drawable/imgcart2"
        android:drawablePadding="@dimen/x15dp"
        android:ellipsize="end"
        android:padding="@dimen/x20dp"
        android:singleLine="true"
        android:text="@string/add_remove_products"
        android:textColor="@color/text_dark"
        android:textSize="16sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/base_grey" />


    <com.ctrlplusz.anytextview.AnyTextView
        android:id="@+id/txtEditScheduling"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:background="@color/white_color"
        android:drawableLeft="@drawable/imgedit"
        android:drawablePadding="@dimen/x15dp"
        android:ellipsize="end"
        android:padding="@dimen/x20dp"
        android:singleLine="true"
        android:text="@string/edit_scheduling"
        android:textColor="@color/text_dark"
        android:textSize="16sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/base_grey" />


    <com.ctrlplusz.anytextview.AnyTextView
        android:id="@+id/txtDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_color"
        android:drawableLeft="@drawable/imgdelete"
        android:drawablePadding="@dimen/x15dp"
        android:ellipsize="end"
        android:padding="@dimen/x20dp"
        android:singleLine="true"

        android:text="@string/delete_from_order_history"
        android:textColor="@color/text_dark"
        android:textSize="16sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/base_grey" />


    <com.ctrlplusz.anytextview.AnyTextView
        android:id="@+id/txtClose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_color"
        android:drawablePadding="@dimen/x15dp"
        android:ellipsize="end"
        android:gravity="center"
        android:padding="@dimen/x20dp"
        android:singleLine="true"
        android:text="@string/close"
        android:textColor="@color/base_color"
        android:textSize="22sp"
        app:typeface="@string/font_bold" />


</LinearLayout>