<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/x10dp">


    <com.andreabaccega.widget.FormEditText
        android:id="@+id/edtFeedback"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x220dp"
        android:layout_marginBottom="@dimen/x25dp"
        android:layout_marginTop="@dimen/x30dp"
        android:layout_marginLeft="@dimen/x5dp"
        android:layout_marginRight="@dimen/x5dp"
        android:background="@drawable/imgbox"
        android:gravity="start"
        android:maxLength="150"
        android:hint="@string/enter_your_detail_here"
        android:padding="@dimen/x15dp"
        app:testType="alphaNumeric" />


    <!--<ImageButton-->
        <!--android:id="@+id/btnDone"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="#0000"-->
        <!--android:src="@drawable/imgdone_bttn" />-->


    <com.ctrlplusz.anytextview.AnyTextView
        android:id="@+id/btnDone"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:text="@string/done"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/img_yes"
        app:typeface="@string/font_bold"/>


</LinearLayout>